Desktop and Mobile completed

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 </head>
 <body class="font-[Poppins]">
     <header>
-        <div class="container mx-auto">
+        <div class="container mx-auto px-8">
             <div class="flex items-center justify-between py-[30px]">
                 <img src="./assets/images/Tasty_HUT.png" alt="">
-                <button class="text-xl font-bold text-[#100F0F] py-4 px-10 bg-[#FFC107] rounded-lg">Foods</button>
+                <button onclick="window.location.href = '#food'" class="text-xl font-bold text-[#100F0F] py-4 px-10 bg-[#FFC107] rounded-lg">Foods</button>
             </div>
         </div>
         <div class="bg-[url('./assets/images/banner_1.png')] bg-center bg-no-repeat bg-cover">
             <div class="backdrop-brightness-50">
-                <div class="container mx-auto">
-                    <div class="flex flex-col items-center justify-center w-3/5 mx-auto text-center py-40 px-16">
-                        <h1 class="text-[65px] leading-tight font-bold text-white">Taste Our Delicious Best Foods</h1>
+                <div class="container mx-auto px-8">
+                    <div class="flex flex-col items-center justify-center lg:w-3/5 mx-auto text-center lg:py-40 lg:px-16 py-12">
+                        <h1 class="text-4xl lg:text-[65px] leading-tight font-bold text-white">Taste Our Delicious Best Foods</h1>
                         <p class="text-lg text-white mt-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humou.</p>
                         <div class="flex items-center w-full mt-8">
                             <span class="material-symbols-outlined text-3xl text-[#706F6F] relative left-[45px] top-0">search</span>
@@ -36,54 +36,82 @@
     </header>
 
     <main>
-        <section class="container mx-auto">
-            <div class="pt-24 pb-20">
+        <section id="food" class="container mx-auto px-8">
+            <div class="pt-16 lg:pt-24 pb-20 flex flex-col justify-center items-center">
                 <h2 class="text-center font-semibold text-4xl">Your Favourite Food</h2>
-                <div id="food-container" class="grid grid-cols-2 gap-6 mt-12">
-                    <div class="food flex gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div>
-                            <img class="rounded-s-lg" src="./assets/images/Rectangle 3980.png" alt="">
+                <div id="food-container" class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-12 mb-16 w-full">
+                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
+                        <div class="col-span-4 w-full h-full">
+                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
                         </div>
-                        <div class="pe-7">
+                        <div class="pe-7 col-span-8 py-5 lg:py-1">
                             <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
                             <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
                             <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
                         </div>
-                    </div>   
-                    <div class="food flex gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div>
-                            <img class="rounded-s-lg" src="./assets/images/Rectangle 3980.png" alt="">
+                    </div> 
+                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
+                        <div class="col-span-4 w-full h-full">
+                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
                         </div>
-                        <div class="pe-7">
+                        <div class="pe-7 col-span-8 py-5 lg:py-1">
                             <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
                             <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
                             <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
                         </div>
-                    </div>   
-                    <div class="food flex gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div>
-                            <img class="rounded-s-lg" src="./assets/images/Rectangle 3980.png" alt="">
+                    </div> 
+                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
+                        <div class="col-span-4 w-full h-full">
+                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
                         </div>
-                        <div class="pe-7">
+                        <div class="pe-7 col-span-8 py-5 lg:py-1">
                             <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
                             <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
                             <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
                         </div>
-                    </div>   
-                    <div class="food flex gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div>
-                            <img class="rounded-s-lg" src="./assets/images/Rectangle 3980.png" alt="">
+                    </div> 
+                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
+                        <div class="col-span-4 w-full h-full">
+                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
                         </div>
-                        <div class="pe-7">
+                        <div class="pe-7 col-span-8 py-5 lg:py-1">
                             <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
                             <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
                             <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
                         </div>
-                    </div>   
+                    </div> 
+                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
+                        <div class="col-span-4 w-full h-full">
+                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
+                        </div>
+                        <div class="pe-7 col-span-8 py-5 lg:py-1">
+                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
+                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
+                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
+                        </div>
+                    </div> 
+                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
+                        <div class="col-span-4 w-full h-full">
+                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
+                        </div>
+                        <div class="pe-7 col-span-8 py-5 lg:py-1">
+                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
+                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
+                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
+                        </div>
+                    </div> 
                 </div>
+
+                <button class="text-xl text-[#100F0F] font-bold bg-[#FFC107] py-4 px-9 rounded-lg">Show All</button>
             </div>
         </section>
     </main>
+
+    <footer class="bg-slate-500 py-4">
+        <div class="container mx-auto px-8">
+            <p class="text-center text-slate-100">Develop by <a class="text-red-300" href="#">Rakibul Islam</a> 2023</p>
+        </div>
+    </footer>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/script.js"></script>
