--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body class="font-[Poppins]">
     <header>
@@ -25,8 +26,8 @@
                         <p class="text-lg text-white mt-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humou.</p>
                         <div class="flex items-center w-full mt-8">
                             <span class="material-symbols-outlined text-3xl text-[#706F6F] relative left-[45px] top-0">search</span>
-                            <input id="" class="w-10/12 py-4 px-6 ps-14 rounded-s-md me-[-10px] outline-none h-16" type="text" name="" placeholder="Search any food">
-                            <button class="text-xl font-bold text-[#100F0F] py-4 px-9 h-16 bg-[#FFC107] rounded-lg">Search</button>
+                            <input id="search-field" class="w-10/12 py-4 px-6 ps-14 rounded-s-md me-[-10px] outline-none h-16" type="text" name="" placeholder="Search any food">
+                            <button onclick="searchData()" class="text-xl font-bold text-[#100F0F] py-4 px-9 h-16 bg-[#FFC107] rounded-lg">Search</button>
                         </div>
                     </div>
                 </div>
@@ -40,70 +41,37 @@
             <div class="pt-16 lg:pt-24 pb-20 flex flex-col justify-center items-center">
                 <h2 class="text-center font-semibold text-4xl">Your Favourite Food</h2>
                 <div id="food-container" class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-12 mb-16 w-full">
-                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div class="col-span-4 w-full h-full">
-                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
-                        </div>
-                        <div class="pe-7 col-span-8 py-5 lg:py-1">
-                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
-                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
-                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
-                        </div>
-                    </div> 
-                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div class="col-span-4 w-full h-full">
-                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
-                        </div>
-                        <div class="pe-7 col-span-8 py-5 lg:py-1">
-                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
-                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
-                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
-                        </div>
-                    </div> 
-                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div class="col-span-4 w-full h-full">
-                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
-                        </div>
-                        <div class="pe-7 col-span-8 py-5 lg:py-1">
-                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
-                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
-                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
-                        </div>
-                    </div> 
-                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div class="col-span-4 w-full h-full">
-                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
-                        </div>
-                        <div class="pe-7 col-span-8 py-5 lg:py-1">
-                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
-                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
-                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
-                        </div>
-                    </div> 
-                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div class="col-span-4 w-full h-full">
-                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
-                        </div>
-                        <div class="pe-7 col-span-8 py-5 lg:py-1">
-                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
-                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
-                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
-                        </div>
-                    </div> 
-                    <div class="food grid grid-cols-12 gap-6 items-center border border-[#100f0f1a] rounded-lg">
-                        <div class="col-span-4 w-full h-full">
-                            <img class="rounded-s-lg w-full h-full block" src="./assets/images/Rectangle 3980.png" alt="">
-                        </div>
-                        <div class="pe-7 col-span-8 py-5 lg:py-1">
-                            <h4 class="text-[#403F3F] text-[25px] font-bold mb-4">Chicken handi</h4>
-                            <p class="text-[#706F6F] text-lg font-normal mb-6 ">There are many variations of passages of available, but the majority have suffered</p>
-                            <button class="text-[#FFC107] text-lg font-semibold underline hover:no-underline">View Details</button>
-                        </div>
-                    </div> 
+                    <!-- Dynamic Element -->
                 </div>
 
                 <button class="text-xl text-[#100F0F] font-bold bg-[#FFC107] py-4 px-9 rounded-lg">Show All</button>
             </div>
+        </section>
+        <section>
+              <!-- Modal -->
+              <div class="modal fade" id="food-btn" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="food-btnLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="p-7 pb-0 border-b border-[#403f3f33]">
+                      <h5 class="modal-title text-3xl text-[#403F3F] font-bold" id="food-btnLabel">Modal title</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <img id="food-img" class="w-full h-72" src="" alt="">
+                      <div>
+                        <h5 class="text-xl text-[#403F3F] font-semibold mt-4">Category : <span id="foodCategory" class="text-[#706F6F] font-normal"></span></h5>
+                        <h5 class="text-xl text-[#403F3F] font-semibold mt-4">Area : <span id="foodArea" class="text-[#706F6F] font-normal"></span></h5>
+                        <h5 class="text-xl text-[#403F3F] font-semibold mt-4">Instructions : <span id="instructions" class="text-[#706F6F] font-normal"></span></h5>
+                        <h5 class="text-xl text-[#403F3F] font-semibold mt-4">Youtube : <a id="youtube" class="text-[#706F6F] font-normal"></a></h5>
+                        
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="text-white text-lg rounded-lg hover:bg-pink-500 py-2 px-9 font-bold bg-[#DC3545]" data-bs-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
 
@@ -113,6 +81,7 @@
         </div>
     </footer>
 
+    <<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/script.js"></script>
 </body>
