--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container mx-auto px-8">
             <div class="flex items-center justify-between py-[30px]">
                 <img src="./assets/images/Tasty_HUT.png" alt="">
-                <button onclick="window.location.href = '#food'" class="text-xl font-bold text-[#100F0F] py-4 px-10 bg-[#FFC107] rounded-lg">Foods</button>
+                <button onclick="window.location.href = '#food'" class="text-xl font-bold text-[#100F0F] py-3 px-10 bg-[#FFC107] rounded-lg">Foods</button>
             </div>
         </div>
         <div class="bg-[url('./assets/images/banner_1.png')] bg-center bg-no-repeat bg-cover">
@@ -27,7 +27,7 @@
                         <div class="flex items-center w-full mt-8">
                             <span class="material-symbols-outlined text-3xl text-[#706F6F] relative left-[45px] top-0">search</span>
                             <input id="search-field" class="w-10/12 py-4 px-6 ps-14 rounded-s-md me-[-10px] outline-none h-16" type="text" name="" placeholder="Search any food">
-                            <button onclick="searchData()" class="text-xl font-bold text-[#100F0F] py-4 px-9 h-16 bg-[#FFC107] rounded-lg">Search</button>
+                            <button onclick="searchData()" class="flex items-center text-xl font-bold text-[#100F0F] py-4 px-9 h-16 bg-[#FFC107] rounded-lg">Search</button>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
         </div>
     </footer>
 
-    <<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/script.js"></script>
 </body>
